--- a/main.html
+++ b/main.html
@@ -4,12 +4,42 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div id="carouselExample" class="carousel slide">
+		<div id="myCarousel" class="carousel-inner">
+		  <div class="carousel-item active first-slide">
+			<img src="https://img.freepik.com/premium-photo/flower-rangoli-diwali-pongal-made-using-marigold-zendu-flowers-red-rose-petals-white-background-with-clay-oil-lamp-middle-selective-focus_466689-20064.jpg?size=626&ext=jpg" class="d-block w-100" alt="...">
+		  </div>
+		  <div class="carousel-item second-slide">
+			<img src="https://img.freepik.com/free-photo/red-black-brush-stroke-banner-background-perfect-canva_1361-3597.jpg?size=626&ext=jpg" class="d-block w-100" alt="...">
+		  </div>
+		  <div class="carousel-item third-slide">
+			<img src="https://img.freepik.com/free-photo/wide-angle-shot-single-tree-growing-clouded-sky-during-sunset-surrounded-by-grass_181624-22807.jpg?size=626&ext=jpg" class="d-block w-100" alt="...">
+		  </div>
+		  <div class="carousel-item fourth-slide">
+			<img src="https://img.freepik.com/free-photo/woman-doctor-wearing-lab-coat-with-stethoscope-isolated_1303-29791.jpg?size=626&ext=jpg" class="d-block w-100" alt="...">
+		  </div>
+		  <div class="carousel-item fifth-slide">
+			<img src="https://img.freepik.com/free-photo/beautiful-scenery-summit-mount-everest-covered-with-snow-white-clouds_181624-21317.jpg?size=626&ext=jpg" class="d-block w-100" alt="...">
+		  </div>
+		</div>
+		<button class="carousel-control-prev glyphicon-chevron-left" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+		  <span class="carousel-control-prev-icon left " aria-hidden="true"></span>
+		  <span class="visually-hidden">Left</span>
+		</button>
+		<button class="carousel-control-next glyphicon-chevron-right" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+		  <span class="carousel-control-next-icon right" aria-hidden="true"></span>
+		  <span class="visually-hidden">Right</span>
+		</button>
+	  </div>
     <script type="text/javascript" src="./script.js">
+		
 </script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 
 </body>
 
