--- a/main.html
+++ b/main.html
@@ -4,12 +4,58 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	<div class="container">  
+		<div id="myCarousel" class="Carousel carousel carousel-inner" data-ride="carousel">
+		  <!-- Indicators -->
+		  <ol class="carousel-indicators">
+			<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+			<li data-target="#myCarousel" data-slide-to="1"></li>
+			<li data-target="#myCarousel" data-slide-to="2"></li>
+		  </ol>
+	  
+		  <!-- Wrapper for slides -->
+		  <div class="carousel-inner">
+			<div class="item ">
+			  <img src="https://image.shutterstock.com/image-photo/small-dragon-lizard-260nw-1370804666.jpg" alt="Los Angeles" style="width:10%">
+			</div>
+	  
+			<div class="item">
+			  <img src="https://image.shutterstock.com/image-photo/emerald-swallow-tail-butterfly-or-260nw-1052167088.jpg" alt="Chicago" style="width:10%">
+			</div>
+		  
+			<div class="item active">
+			  <img src="https://image.shutterstock.com/image-photo/green-parrot-greatgreen-macaw-ara-260nw-516954958.jpg" alt="New york" style="width:10%">
+			</div>
+			<div class="item">
+				<img src="https://image.shutterstock.com/image-photo/red-eye-frog-perched-on-260nw-417616603.jpg" alt="japan" style="width:10%">
+			  </div>
+			<div class="item">
+				<img src="https://image.shutterstock.com/image-photo/close-view-dangerous-green-snake-260nw-666196936.jpg" alt="mexico" style="width:10%">
+			  </div>
+		  </div>
+	  
+		  <!-- Left and right controls -->
+		  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+			<span class="glyphicon glyphicon-chevron-left"></span>
+			<span class="sr-only">Previous</span>
+		  </a>
+		  <a class="right carousel-control" href="#myCarousel" data-slide="next">
+			<span class="glyphicon glyphicon-chevron-right"></span>
+			<span class="sr-only">Next</span>
+		  </a>
+		</div>
+	  </div>
+	  
+    <script type="text/javascript" src="./script.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
 
 </body>
 
